# minecraft-pi-reborn

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  Dockerfile  Dockerfile.build  Dockerfile.client  Dockerfile.server  Jenkinsfile  LICENSE  MODDING.md  README.md  build.sh  docker-compose.yml  install.sh  run.sh  test  test.cpp
core/: CMakeLists.txt
core/include/libcore/: libcore.h
core/src/: core.c  launcher.c
core/src/stubs/: EGL.c  GLESv2.c  bcm_host.c
dependencies/: CMakeLists.txt
dependencies/LIEF/: CMakeLists.txt
dependencies/LIEF/patches/: fix-windows-build.patch
dependencies/armhf-sysroot/: CMakeLists.txt
dependencies/armhf-sysroot/apt/: sources.list
dependencies/gles-compatibility-layer/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt  fix-hidpi.patch
dependencies/imgui/glad/: CMakeLists.txt
dependencies/libpng/: CMakeLists.txt  libpng.vers
dependencies/libpng/zlib/: CMakeLists.txt
dependencies/minecraft-pi/: CMakeLists.txt
dependencies/openal/: CMakeLists.txt
dependencies/openal/include/: alformat.hpp
dependencies/qemu/: CMakeLists.txt  trampoline.patch
dependencies/runtime/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt
dependencies/stb_image/include/: stb_image.h.in  stb_image_write.h.in
dependencies/stb_image/src/: stb_image_impl.c
dependencies/symbol-processor/: CMakeLists.txt
dependencies/trampoline/: CMakeLists.txt
dependencies/utf8cpp/: CMakeLists.txt
dependencies/zenity/: CMakeLists.txt
dependencies/zlib/: CMakeLists.txt
example-mods/custom-block/: CMakeLists.txt
example-mods/custom-block/src/: custom-block.cpp
example-mods/expanded-creative/: CMakeLists.txt  expanded-creative.cpp
example-mods/expanded-creative/src/: expanded-creative.cpp
images/: CMakeLists.txt  chest.png~
launcher/: CMakeLists.txt
launcher/data/: CMakeLists.txt  appstream.xml  launcher.desktop  launcher.manifest
launcher/data/linux/: appstream.xml  launcher.desktop
launcher/data/win32/: launcher.manifest  launcher.rc
launcher/dependencies/: CMakeLists.txt
launcher/dependencies/patchelf/: CMakeLists.txt
launcher/src/: bootstrap.c  bootstrap.cpp  bootstrap.h  crash-report.c  crash-report.cpp  crash-report.h  launcher.c  ldconfig.cpp  ldconfig.h  main.cpp  mods.c  mods.cpp  patchelf.c  patchelf.cpp  patchelf.h  run.sh  sdk.c  sdk.cpp  util.c  util.cpp  util.h
launcher/src/bootstrap/: assets.cpp  bootstrap.cpp  bootstrap.h  debug.cpp  download.cpp  mods.cpp  patchelf.cpp  runtime.cpp  util.cpp  wsl.cpp
launcher/src/client/: available-feature-flags  cache.cpp  cache.h  configuration.cpp  configuration.h  launcher.cpp  launcher.h  ui.cpp
launcher/src/install/: install-win32.cpp  install.cpp  install.h  install_win32.cpp
launcher/src/logger/: crash-report.cpp  logger.cpp  logger.h  writer.cpp  writer.h
launcher/src/options/: list.h  option-list.h  parser-win32.cpp  parser.cpp  parser.h  parser_win32.cpp
launcher/src/server/: launcher.c
launcher/src/stubs/: EGL.c  SDL.cpp
launcher/src/ui/: color.cpp  frame.cpp  frame.h  util.cpp
launcher/src/updater/: appimage.cpp  checker.cpp  thread.cpp  updater.cpp  updater.h
launcher/src/util/: binary.cpp  env.cpp  install.cpp  paths.cpp  sdk.cpp  util.cpp  util.h
libreborn/: CMakeLists.txt
libreborn/include/libreborn/: config.h  config.h.in  elf.h  env-list.h  env.h  exec.h  flags.h  glfw.h  home.h  libreborn.h  log.h  minecraft.h  patch.h  servers.h  string.h  util.h
libreborn/src/: libreborn.c  patch.c  reborn.c
libreborn/src/fake-libpng/: empty.vers
libreborn/src/patch/: cache.cpp  code-block.cpp  instruction.cpp  patch-internal.h  patch.c  patch.cpp  segments.cpp
libreborn/src/util/: config.cpp  config.cpp.in  cp437.cpp  elf.c  env.c  env.cpp  exec.c  exec.cpp  glfw.cpp  log.c  log.cpp  poll.cpp  servers.cpp  string.c  string.cpp  util.c  util.cpp
media-layer/: CMakeLists.txt
media-layer/core/: CMakeLists.txt
media-layer/core/dependencies/: CMakeLists.txt
media-layer/core/gles/: CMakeLists.txt
media-layer/core/src/: base.cpp  base.h  events.cpp  media.c  media.cpp  media.h  offscreen.cpp  screenshot.c  util.cpp
media-layer/extras/: CMakeLists.txt
media-layer/extras/src/: SDL.c  X11.cpp
media-layer/gles/: CMakeLists.txt
media-layer/gles/src/: passthrough.c  passthrough.cpp  stubs.c
media-layer/include/: GLES
media-layer/include/EGL/: egl.h
media-layer/include/GLES/: gl.h
media-layer/include/SDL/: SDL.h  SDL_events.h  SDL_keysym.h  SDL_syswm.h  SDL_version.h
media-layer/include/X11/: Xlib.h
media-layer/include/media-layer/: audio.h  core.h  internal.h
media-layer/proxy/: CMakeLists.txt
media-layer/proxy/src/: GLESv1_CM.c  media-layer-core.c
media-layer/stubs/: CMakeLists.txt
media-layer/stubs/redirect/: CMakeLists.txt
media-layer/stubs/src/: EGL.c  GLESv1_CM.c  X11.c  bcm_host.c
media-layer/trampoline/: CMakeLists.txt
media-layer/trampoline/src/: GLESv1_CM.c  GLESv1_CM.cpp  media-layer-core.c  media-layer-core.cpp
mods/: CMakeLists.txt  README.md
mods/include/libcore/: libcore.h
mods/include/mods/: common.h
mods/src/: compat.c  core.c  cxx11_util.cpp  cxx11_util.h  extra.c  extra.cpp  extra.h  minecraft.h  readdir.c  time.c  touch.c
mods/src/api/: README.md  (+8 more)
symbols/: CMakeLists.txt
symbols/src/: AppPlatform.def  AppPlatform_linux.def  AppPlatform_readAssetFile_return_value.def  Biome.def  ChestTileEntity.def  ChunkSource.def  CommandServer.def  Container.def  CreatorMode.def  Entity.def  EntityFactory.def  ExternalFileLevelStorageSource.def  FillingContainer.def  FurnaceRecipes.def  FurnaceScreen.def  FurnaceTileEntity.def  GameMode.def  GameRenderer.def  GuiComponent.def  HumanoidMobRenderer.def  HumanoidModel.def  IBuildInput.def  ImageButton.def  Inventory.def  Item.def  ItemInstance.def  Level.def  LevelData.def  Minecraft.def  Mob.def  Mouse.def  MouseBuildInput.def  NinecraftApp.def  OffsetPosTranslator.def  OptionsFile.def  Packet.def  ParticleEngine.def  PauseScreen.def  PerfRenderer.def  Player.def  (+27 more)
tools/: CMakeLists.txt
(+887 files in other folders)
